--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+.btn-group {
+  margin-top: 20px;
+  display: flex; 
+  gap: 20px; 
+  align-items: center;
+  justify-content: center;
+}
